(executables
  (names
    flambda_benchs
    annotated_expr
    annotations_module
    separate_annotations
    search_monad
    search_monad_eager
    monad_transformers
    continuation
    regex
    expand
    ansi
    ast_visitor
    ac_unif
    groebner
    debug_test
    unification
    lang_basic
    lang_cont
    gadts
    gen_bintree
    union_find
    bigarray_tests
    sussman_matching
    egraph
    ext_annots
    ppx_import)
  (modes byte exe)
  (libraries base stdio core_bench ANSITerminal re zarith)
  (preprocess (pps
    ppx_jane
    ppx_deriving.eq
    ppx_deriving.show))
  (ocamlopt_flags -O3)
  (flags (-open Base)))