(executables
 (names
  flambda_benchs
  debruijn
  annotated_expr
  annotations_module
  separate_annotations
  search_monad
  monad_transformers
  continuation
  expand
  ast_visitor
  ac_unif
  groebner
  unification
  lang_basic
  lang_cont
  gadts
  gen_bintree
  union_find
  sussman_matching
  egraph
  ext_annots
  debug_nonterminating)
 (modes byte exe)
 (libraries base stdio core_bench core_unix.command_unix zarith angstrom)
 (preprocess
  (pps ppx_jane ppx_deriving.eq ppx_deriving.show))
 (ocamlopt_flags -O3)
 (flags
  (-open Base)))
