(lang dune 3.3)

(generate_opam_files true)

(authors "Jonathan Laurent")
(maintainers "jonathan.laurent@cs.cmu.edu")

(package
 (name algorithm-snippets)
 (allow_empty)
 (synopsis "OCaml snippets")
 (source (github "jonathan-laurent/ocaml-snippets"))
 (description
  "\| Some fun and useful OCaml snippets
 )
 (depends
  base
  stdio
  ppx_deriving
  core_bench
  core_unix
  zarith
  angstrom
 ))